Convert Device.id from `long` to `byte`